force-app/main/default/objects/GroupMembership__e/GroupMembership__e.object-meta.xml
<CustomObject>
    <description>Used to add or remove a user from a public group</description>
    <label>Group Membership</label>
    <pluralLabel>Group Memberships</pluralLabel>
</CustomObject>