force-app/main/default/objects/GroupMembership__e/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>Specify the name of the group that the user should be added or removed from</description>
    <label>Group Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>