force-app/main/default/objects/GroupMembership__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of event, must be one of: groupAdd, groupRemove</description>
    <label>Type</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>