force-app/main/default/objects/GroupMembership__e/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <description>The ID of the user that should be removed from or added to the group</description>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>